[package]
name = "movedao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
serde = { version="1", features = ["derive"] }
sea-orm = { version="0.9.2", features=["runtime-tokio-native-tls", "sqlx-postgres", "debug-print"] }
tokio = { version="1", features=["full"] }
config = "0.13"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
askama = "0.11"